Hid the A&S media nav on small screens to avoid mobile issues.

--- a/style.css
+++ b/style.css
@@ -408,6 +408,9 @@ i.active {
     color: white;
     font-size: 29px;
   }
+  #media-nav {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 499px) {
